# automatizacion

./: .coverage  .dockerignore  .gitignore  .project.json  ANALISIS_TRAMITES_GOB_MX.md  BITACORA.md  CAMBIOS_REALIZADOS.md  Dockerfile  ESTADO_FINAL.md  GUIA_COMPLETA.md  GUIA_INSTALACION_COMPLETA.md  INSTRUCCIONES.md  Makefile  NUEVAS_FUNCIONALIDADES.md  PROJECT-SCORE.md  README.md  RESUMEN_FINAL_COMPLETO.md  RESUMEN_IMPLEMENTACION_FINAL.md  RESUMEN_OPTIMIZACIONES.md  ROADMAP_COMPLETO.md  UNIFICACION.md  VERIFICACION_COMPLETA.md  _analyze_errors.py  _benchmark.py  _check_ckpt.py  _optimize.py  _profile_timing.py  app.py  auto_diagnostico.py  benchmark_browser_pool.py  config.example.env  docker-compose.yml  download_captchas.py  get_captcha.py  health_check.py  main.py  main_multimodal.py  pyproject.toml  requirements.txt  servicios.js  (+11 more)
.githooks/: pre-commit
.github/workflows/: ci.yml
.learnings/: audit-round-2-findings.md
captcha_solver_imss/: __init__.py  captcha-nss-gratis.md  captcha-nss-mi-enfoque.md  captcha-nss-pago.md  captcha-nss-python-local.md  preprocess.py  solver.py  store.py  test.py
captcha_solver_imss/cnn_solver/: dataset.py  model.py  model_v2.py  predict.py  solver.py  solver_v2.py  train.py  train_v2.py  train_v3.py
data/: perfiles.json
docs/archive/: P1-EXPLORE.md  P2-DIAGNOSIS.md  P3-PLAN.md
docs/investigacion/: 2026-07-05-analisis-inicial.md  _data.json
docs/mejoras/: 2026-07-14-automatizacion-analisis.md  ANALISIS-ARQUITECTURA-BACKEND.md  ANALISIS-CONSOLIDADO-GENERAL.md  ANALISIS-INFRA-DEVOPS.md  ANALISIS-PERFORMANCE.md  ANALISIS-SEGURIDAD.md  ANALISIS-TESTING-CALIDAD.md  ANALISIS-UI-UX.md  PLAN-CONSOLIDADO-2026-07.md  RESUMEN-MEJORAS-2026-07.md
docs/operations/: project-score.md
logs/: metricas_tramites.jsonl
modules/: antecedentes.py  base.py  curp.py  nss.py  tenencia.py
output/: perfiles.json
src/: api.py  exceptions.py  main.py  main_multimodal.py  validators.py
src/modules/: acta_nacimiento.py  antecedentes.py  base.py  buro.py  circulo.py  cita_ine.py  cita_sat.py  control_confianza.py  credito.py  curp.py  nss.py  orchestrator.py  pasaporte.py  rfc.py  semanas.py  template.py  tenencia.py
src/modules/documentos/: __init__.py  cv.py  escrito.py
src/tramites/: acta_nacimiento.py  antecedentes.py  base.py  buro.py  circulo.py  cita_ine.py  cita_sat.py  control_confianza.py  credito.py  curp.py  nss.py  orchestrator.py  pasaporte.py  rfc.py  semanas.py  template.py  tenencia.py
src/tramites/documentos/: cv.py  escrito.py
src/utils/: browser_pool.py  captcha.py  claude.py  free_captcha.py  interaction.py  logger.py  mail_reader.py  multimodal_input.py  ocr.py  pii.py  rate_limiter.py  secrets_manager.py  storage.py  voice_input.py
tests/: conftest.py  test_acta_nacimiento.py  test_antecedentes.py  test_api.py  test_api_solver.py  test_base.py  test_browser_pool.py  test_captcha.py  test_cita_ine.py  test_cita_sat.py  test_claude.py  test_control_confianza.py  test_credito.py  test_curp.py  test_cv.py  test_escrito.py  test_exceptions.py  test_free_captcha.py  test_health_check.py  test_interaction.py  test_logger.py  test_mail_reader.py  test_main.py  test_main_multimodal.py  test_multimodal_input.py  test_nss.py  test_ocr.py  test_orchestrator.py  test_pasaporte.py  test_pii.py  test_rate_limiter.py  test_rfc.py  test_secrets_manager.py  test_semanas.py  test_storage.py  test_tenencia.py  test_validators.py  test_voice_input.py
tests/test_modules/: conftest.py  test_credito.py  test_curp_nss_tenencia.py  test_rest_modules.py  test_small_modules.py
tools/: __init__.py  _analyze_errors.py  _benchmark.py  _check_ckpt.py  _optimize.py  _profile_timing.py  debug_curp.py  download_captchas.py  generate_dataset.py  get_captcha.py  test_captcha_solver.py  test_solver_hard.py
utils/: captcha.py  mail_reader.py  multimodal_input.py  ocr.py  storage.py  voice_input.py
