[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agente-tramites-gobmx"
version = "1.0.0"
description = "Agente automatizador de trámites gubernamentales mexicanos"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "playwright>=1.42.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "cryptography>=42.0.0",
    "imapclient>=2.3.1",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
web = [
    "streamlit>=1.58.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.3.0",
]

[project.scripts]
tramites = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["modules*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.urls]
Repository = "https://github.com/LuisAlbertoMK/automatizacion"
