[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-tramites-gobmx"
version = "1.0.0"
description = "Agente automatizador de trámites gubernamentales mexicanos"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "playwright>=1.42.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "cryptography>=42.0.0",
    "imapclient>=2.3.1",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
web = [
    "streamlit>=1.58.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "slowapi>=0.1.9",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "httpx>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.3.0",
]

[project.scripts]
tramites = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["modules*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def _handle_shutdown",
    "except ImportError",
    "except Exception:",
    "if FREE_SOLVER_AVAILABLE",
    "if IMSS_SOLVER_AVAILABLE",
    "if OCR_AVAILABLE",
    "if MAIL_AVAILABLE",
    "if FASTAPI_AVAILABLE",
    "if WHISPER_AVAILABLE",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W293"]

[project.urls]
Repository = "https://github.com/LuisAlbertoMK/automatizacion"
