[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-tramites-gobmx"
version = "1.0.0"
description = "Agente automatizador de trámites gubernamentales mexicanos"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "playwright>=1.42.0,<2.0",
    "requests>=2.31.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "pillow>=10.0.0,<12.0",
    "pytesseract>=0.3.10,<0.4",
    "pdf2image>=1.16.0,<2.0",
    "cryptography>=42.0.0,<44.0",
    "imapclient>=2.3.1,<3.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "colorama>=0.4.6,<1.0",
    "numpy>=1.24.0,<2.0",
    "python-docx>=1.1.0,<2.0",
]

[project.optional-dependencies]
captcha_ml = [
    "opencv-python>=4.9.0,<5.0",
    "easyocr>=1.7,<2.0",
    "onnxruntime>=1.17,<2.0",
]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6,<0.6",
    "soundfile>=0.12.1,<0.13",
]
web = [
    "streamlit>=1.58.0,<2.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.30.0,<1.0",
    "slowapi>=0.1.9,<1.0",
]
test = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=7.0.0,<8.0",
    "pytest-watch>=4.2.0,<5.0",
    "httpx>=0.28.0,<1.0",
]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-watch>=4.2.0,<5.0",
    "ruff>=0.3.0,<1.0",
]

[project.scripts]
tramites = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "captcha_solver_imss*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def _handle_shutdown",
    "except ImportError",
    "except Exception:",
    "if FREE_SOLVER_AVAILABLE",
    "if IMSS_SOLVER_AVAILABLE",
    "if OCR_AVAILABLE",
    "if MAIL_AVAILABLE",
    "if FASTAPI_AVAILABLE",
    "if WHISPER_AVAILABLE",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W293"]

[project.urls]
Repository = "https://github.com/LuisAlbertoMK/automatizacion"
